# riplex

./: .gitignore  CONTRIBUTORS.md  LICENSE  MONOREPO_PLAN.md  PLANNED_FEATURES.md  README.md  REFACTOR_PLAN.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v1.0.0.md  mkdocs.yml  plex_naming_rules.md  pyproject.toml
.github/: contributors-overrides.json  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  crash_report.yml
.github/agents/: riplex.agent.md
.github/workflows/: auto-tag.yml  publish.yml  release.yml  update-contributors.yml
docs/: architecture.md  changelog.md  index.md  naming-rules.md  planned-mkdocs-migration.md  troubleshooting.md
docs/cli-guide/: lookup.md  orchestrate.md  organize.md  workflow.md
docs/development/: testing.md
docs/getting-started/: configuration.md  installation.md
docs/gui-guide/: gui-walkthrough.md
docs/guide/: lookup.md  orchestrate.md  organize.md  plan.md  rip-guide.md  snapshot.md  workflow.md
docs/reference/: cli.md
issues/: compilation-contains-missing-targets.md  cross-disc-dvdcompare-matching.md  debug-artifacts-consolidation.md  dvdcompare-4k-sparse-extras.md  dvdcompare-zero-runtime-film-entries.md  manual-rip-and-organize-escape-hatch.md  one-season-at-a-time.md  orchestrate-dvdcompare-fallback.md  organize-preview-match-override.md  planned-features.md  thediscdb-metadata-source.md  waterworld-unmatched-ulysses-cut.md
scripts/: __init__.py  capture_fixture.py  dryrun_match_from_capture.py  gen_gui_fixtures.py  generate_rip_snapshots.py  gui_screenshot.py  update_contributors.py
src/plex_planner/: __init__.py  cache.py  cli.py  config.py  dedup.py  detect.py  disc_analysis.py  disc_provider.py  formatter.py  makemkv.py  matcher.py  metadata_provider.py  models.py  normalize.py  organizer.py  planner.py  scanner.py  snapshot.py  tagger.py  ui.py
src/plex_planner/metadata_sources/: tmdb.py
src/riplex/: __init__.py  cache.py  cli.py  config.py  dedup.py  detect.py  disc_analysis.py  disc_provider.py  formatter.py  lookup.py  manifest.py  matcher.py  models.py  normalize.py  organize_by_group.py  organizer.py  planner.py  resume.py  scanner.py  snapshot.py  splitter.py  tagger.py  title.py  ui.py  updater.py
src/riplex/disc/: __init__.py  analysis.py  makemkv.py  provider.py
src/riplex/metadata/: __init__.py  autosearch.py  planner.py  provider.py
src/riplex/metadata/sources/: tmdb.py
src/riplex/metadata_sources/: tmdb.py
src/riplex_app/: bug_report.py  crash_dump.py  keep_awake.py  main.py  updater.py
src/riplex_app/screens/: disc_detection.py  disc_overview.py  disc_swap.py  done.py  folder_picker.py  metadata.py  orchestrate_done.py  organize_done.py  organize_preview.py  progress.py  release.py  season_select.py  selection.py  update.py  welcome.py
src/riplex_cli/: __init__.py  formatting.py  main.py
src/riplex_cli/commands/: lookup.py  orchestrate.py  organize.py  rip.py  setup.py
tests/: conftest.py  test_app_main.py  test_autosearch.py  test_cache.py  test_captures.py  test_cli_utils.py  test_config.py  test_dedup.py  test_detect.py  test_disc_analysis.py  test_disc_detection_screen.py  test_disc_fixtures.py  test_disc_provider.py  test_folder_picker.py  test_formatter.py  test_lookup.py  test_lookup_resolve_groups.py  test_makemkv.py  test_manifest_prefill_ids.py  test_manifest_session.py  test_matcher.py  test_metadata_screen.py  test_normalize.py  test_organize_by_group.py  test_organize_cli.py  test_organize_session_fanout.py  test_organizer.py  test_planner.py  test_progress.py  test_release_screen.py  test_resume.py  test_rip_guide.py  test_scanner.py  test_season_select_screen.py  test_snapshot.py  test_splitter.py  test_tagger.py  test_tmdb_provider.py  test_ui.py  test_update_contributors.py  (+3 more)
tests/fixtures/: chernobyl_disc1.json  makemkvcon_frozen_planet_ii_d2.txt  makemkvcon_list.txt
tests/fixtures/gui/scenarios/: 2001-a-space-odyssey-1968.json  akira-1988.json  back-to-the-future-1985.json  back-to-the-future-part-ii-1989.json  back-to-the-future-part-iii-1990.json  blade-1998.json  blade-runner-2049-2017.json  chernobyl-2019.json  d-day-normandy-1944-2014.json  (+27 more)
tests/integration/: __init__.py  conftest.py  test_cli_lookup.py  test_cli_organize.py  test_cli_parser.py  test_fixture_scenarios.py  test_flow_errors.py  test_flow_media_types.py  test_flow_movie_orchestrate.py  test_flow_organize.py  test_flow_resume_prefill.py  test_flow_tv_orchestrate.py  test_flow_welcome.py  test_screen_build_smoke.py
tests/snapshots/: Batman Begins.snapshot.json  Blade Runner (Blu-ray 4k).snapshot.json  Blade Runner The Final Cut.snapshot.json  Seven Worlds One Planet.snapshot.json  The Dark Knight Rises.snapshot.json  The Dark Knight.snapshot.json  Waterworld.snapshot.json
tests/support/: __init__.py  cli.py  driver.py  fake_page.py  fixtures.py  provider_mocks.py  seed.py  sync_runtime.py
