[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "riplex"
dynamic = ["version"]
description = "Automates the tedious manual work around MakeMKV: figuring out what to rip, which MKV files are actually what, and organizing everything into Plex-compatible folder structures."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27",
    "dvdcompare-scraper>=0.1.15",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
gui = [
    # Pin to a tested Flet range.  We've verified 0.84 and 0.85 both work
    # with the GUI's current API usage (``ft.Border.all``,
    # ``page.show_dialog``).  An open upper bound risked picking up
    # breaking renames silently (see issue #12); cap at the next minor
    # bump so a future Flet release can't break ``pip install`` for
    # everyone the moment it lands on PyPI.
    "flet>=0.84,<0.86",
    # tkinter is also required for the folder picker buttons but cannot be
    # installed via pip — it is part of Python's standard library and must be
    # installed at the OS level:
    #   macOS (Homebrew Python): brew install python-tk@3.12
    #   Linux (Debian/Ubuntu):   sudo apt install python3-tk
    #   Windows:                 included in the standard python.org installer
]

[project.scripts]
riplex = "riplex_cli.main:main"

[project.gui-scripts]
riplex-ui = "riplex_app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
