[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "riplex"
dynamic = ["version"]
description = "Automates the tedious manual work around MakeMKV: figuring out what to rip, which MKV files are actually what, and organizing everything into Plex-compatible folder structures."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "certifi>=2024.2.2",
    "httpx>=0.27",
    "dvdcompare-scraper>=0.1.16",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
gui = [
    # Pin Flet to an exact version.  We've verified 0.84 and 0.85 both work
    # with the GUI's current API usage (``ft.Border.all``,
    # ``page.show_dialog``).  An open upper bound risked picking up
    # breaking renames silently (see issue #12).
    #
    # We pin to ``==0.85.1`` specifically because the prebuilt macOS desktop
    # runtime that ships with 0.85.3 (``flet-desktop-full-0.85.3``, downloaded
    # from Flet's CDN at build time) has a malformed nested
    # ``objective_c.framework`` whose code signature newer macOS ``codesign``
    # rejects.  That broke the PyInstaller macOS build (release workflow) and
    # produced a GUI bundle that crashes on launch (issue #21).  Keep
    # ``flet`` and ``flet-desktop`` in lockstep at this version.
    "flet==0.85.1",
    # tkinter is also required for the folder picker buttons but cannot be
    # installed via pip — it is part of Python's standard library and must be
    # installed at the OS level:
    #   macOS (Homebrew Python): brew install python-tk@3.12
    #   Linux (Debian/Ubuntu):   sudo apt install python3-tk
    #   Windows:                 included in the standard python.org installer
]

[project.scripts]
riplex = "riplex_cli.main:main"

[project.gui-scripts]
riplex-ui = "riplex_app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
